syntax = 'proto3';

package protocol;

option go_package = "github.com/apecloud/kubeblocks/internal/loadbalancer/protocol";

service Node {
  rpc ChooseBusiestENI(ChooseBusiestENIRequest) returns (ChooseBusiestENIResponse) {}

  rpc GetManagedENIs(GetManagedENIsRequest) returns (GetManagedENIsResponse) {}

  rpc SetupNetworkForService(SetupNetworkForServiceRequest) returns (SetupNetworkForServiceResponse) {}

  rpc CleanNetworkForService(CleanNetworkForServiceRequest) returns (CleanNetworkForServiceResponse) {}
}

message ChooseBusiestENIRequest{
  string request_id = 1;
}

message ChooseBusiestENIResponse{
  string request_id = 1;
  ENIMetadata eni = 2;
}

message GetManagedENIsRequest {
  string request_id = 1;
}

message GetManagedENIsResponse {
  string request_id = 1;
  map<string, ENIMetadata> enis = 2;
}

message SetupNetworkForServiceRequest {
  string request_id = 1;
  string private_ip = 2;
  ENIMetadata eni = 3;
}

message SetupNetworkForServiceResponse {
  string request_id = 1;
  string private_ip = 2;
  ENIMetadata eni = 3;
}

message CleanNetworkForServiceRequest {
  string request_id = 1;
  string private_ip = 2;
  ENIMetadata eni = 3;
}

message CleanNetworkForServiceResponse {
  string request_id = 1;
  string private_ip = 2;
  ENIMetadata eni = 3;
}

message ENIMetadata {
  string eni_id = 1;

  string mac = 2;

  int32 device_number = 3;

  string subnet_id = 4;

  string subnet_ipv4_cidr = 5;

  repeated IPv4Address ipv4_addresses = 6;

  map<string, string> tags = 7;
}

message IPv4Address {
  bool primary = 1;

  string address = 2;
}